--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
     <packaging>jar</packaging>
 
     <name>GawdAPI</name>
-    <url>https://github.com/PluginAPI</url>
+    <url>https://github.com/GawdServer/PluginAPI</url>
 
     <properties>
         <maven.compiler.target>1.8</maven.compiler.target>
